ANTLR/Frontend/NodeLangParser.cpp

// Generated from NodeLang.g4 by ANTLR 4.9.2


#include "NodeLangListener.h"
#include "NodeLangVisitor.h"

#include "NodeLangParser.h"


using namespace antlrcpp;
using namespace antlr4;

NodeLangParser::NodeLangParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

NodeLangParser::~NodeLangParser() {
  delete _interpreter;
}

std::string NodeLangParser::getGrammarFileName() const {
  return "NodeLang.g4";
}

const std::vector<std::string>& NodeLangParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& NodeLangParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

NodeLangParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NodeLangParser::NodeDeclContext *> NodeLangParser::ProgramContext::nodeDecl() {
  return getRuleContexts<NodeLangParser::NodeDeclContext>();
}

NodeLangParser::NodeDeclContext* NodeLangParser::ProgramContext::nodeDecl(size_t i) {
  return getRuleContext<NodeLangParser::NodeDeclContext>(i);
}


size_t NodeLangParser::ProgramContext::getRuleIndex() const {
  return NodeLangParser::RuleProgram;
}

void NodeLangParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void NodeLangParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any NodeLangParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NodeLangVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

NodeLangParser::ProgramContext* NodeLangParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, NodeLangParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(13); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(12);
      nodeDecl();
      setState(15); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == NodeLangParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NodeDeclContext ------------------------------------------------------------------

NodeLangParser::NodeDeclContext::NodeDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NodeLangParser::VarDeclContext* NodeLangParser::NodeDeclContext::varDecl() {
  return getRuleContext<NodeLangParser::VarDeclContext>(0);
}

NodeLangParser::FuncDeclContext* NodeLangParser::NodeDeclContext::funcDecl() {
  return getRuleContext<NodeLangParser::FuncDeclContext>(0);
}


size_t NodeLangParser::NodeDeclContext::getRuleIndex() const {
  return NodeLangParser::RuleNodeDecl;
}

void NodeLangParser::NodeDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNodeDecl(this);
}

void NodeLangParser::NodeDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNodeDecl(this);
}


antlrcpp::Any NodeLangParser::NodeDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NodeLangVisitor*>(visitor))
    return parserVisitor->visitNodeDecl(this);
  else
    return visitor->visitChildren(this);
}

NodeLangParser::NodeDeclContext* NodeLangParser::nodeDecl() {
  NodeDeclContext *_localctx = _tracker.createInstance<NodeDeclContext>(_ctx, getState());
  enterRule(_localctx, 2, NodeLangParser::RuleNodeDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(17);
    match(NodeLangParser::T__0);
    setState(18);
    match(NodeLangParser::T__1);
    setState(21);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(19);
      varDecl();
      break;
    }

    case 2: {
      setState(20);
      funcDecl();
      break;
    }

    default:
      break;
    }
    setState(23);
    match(NodeLangParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDeclContext ------------------------------------------------------------------

NodeLangParser::FuncDeclContext::FuncDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> NodeLangParser::FuncDeclContext::ID() {
  return getTokens(NodeLangParser::ID);
}

tree::TerminalNode* NodeLangParser::FuncDeclContext::ID(size_t i) {
  return getToken(NodeLangParser::ID, i);
}

std::vector<NodeLangParser::NodeContext *> NodeLangParser::FuncDeclContext::node() {
  return getRuleContexts<NodeLangParser::NodeContext>();
}

NodeLangParser::NodeContext* NodeLangParser::FuncDeclContext::node(size_t i) {
  return getRuleContext<NodeLangParser::NodeContext>(i);
}


size_t NodeLangParser::FuncDeclContext::getRuleIndex() const {
  return NodeLangParser::RuleFuncDecl;
}

void NodeLangParser::FuncDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncDecl(this);
}

void NodeLangParser::FuncDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncDecl(this);
}


antlrcpp::Any NodeLangParser::FuncDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NodeLangVisitor*>(visitor))
    return parserVisitor->visitFuncDecl(this);
  else
    return visitor->visitChildren(this);
}

NodeLangParser::FuncDeclContext* NodeLangParser::funcDecl() {
  FuncDeclContext *_localctx = _tracker.createInstance<FuncDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, NodeLangParser::RuleFuncDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    match(NodeLangParser::ID);
    setState(26);
    match(NodeLangParser::T__0);
    setState(30);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == NodeLangParser::ID) {
      setState(27);
      match(NodeLangParser::ID);
      setState(32);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(33);
    match(NodeLangParser::T__2);
    setState(35); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(34);
      node();
      setState(37); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << NodeLangParser::T__0)
      | (1ULL << NodeLangParser::T__3)
      | (1ULL << NodeLangParser::T__4)
      | (1ULL << NodeLangParser::T__5)
      | (1ULL << NodeLangParser::T__6)
      | (1ULL << NodeLangParser::ID)
      | (1ULL << NodeLangParser::INT))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NodeContext ------------------------------------------------------------------

NodeLangParser::NodeContext::NodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NodeLangParser::NodeDeclContext* NodeLangParser::NodeContext::nodeDecl() {
  return getRuleContext<NodeLangParser::NodeDeclContext>(0);
}

NodeLangParser::ExprContext* NodeLangParser::NodeContext::expr() {
  return getRuleContext<NodeLangParser::ExprContext>(0);
}

tree::TerminalNode* NodeLangParser::NodeContext::ID() {
  return getToken(NodeLangParser::ID, 0);
}

std::vector<NodeLangParser::NodeContext *> NodeLangParser::NodeContext::node() {
  return getRuleContexts<NodeLangParser::NodeContext>();
}

NodeLangParser::NodeContext* NodeLangParser::NodeContext::node(size_t i) {
  return getRuleContext<NodeLangParser::NodeContext>(i);
}


size_t NodeLangParser::NodeContext::getRuleIndex() const {
  return NodeLangParser::RuleNode;
}

void NodeLangParser::NodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNode(this);
}

void NodeLangParser::NodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNode(this);
}


antlrcpp::Any NodeLangParser::NodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NodeLangVisitor*>(visitor))
    return parserVisitor->visitNode(this);
  else
    return visitor->visitChildren(this);
}

NodeLangParser::NodeContext* NodeLangParser::node() {
  NodeContext *_localctx = _tracker.createInstance<NodeContext>(_ctx, getState());
  enterRule(_localctx, 6, NodeLangParser::RuleNode);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(39);
      nodeDecl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(40);
      expr();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(41);
      match(NodeLangParser::T__0);
      setState(42);
      match(NodeLangParser::ID);
      setState(46);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << NodeLangParser::T__0)
        | (1ULL << NodeLangParser::T__3)
        | (1ULL << NodeLangParser::T__4)
        | (1ULL << NodeLangParser::T__5)
        | (1ULL << NodeLangParser::T__6)
        | (1ULL << NodeLangParser::ID)
        | (1ULL << NodeLangParser::INT))) != 0)) {
        setState(43);
        node();
        setState(48);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(49);
      match(NodeLangParser::T__2);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

NodeLangParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NodeLangParser::VarDeclContext::ID() {
  return getToken(NodeLangParser::ID, 0);
}

NodeLangParser::ExprContext* NodeLangParser::VarDeclContext::expr() {
  return getRuleContext<NodeLangParser::ExprContext>(0);
}


size_t NodeLangParser::VarDeclContext::getRuleIndex() const {
  return NodeLangParser::RuleVarDecl;
}

void NodeLangParser::VarDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDecl(this);
}

void NodeLangParser::VarDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDecl(this);
}


antlrcpp::Any NodeLangParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NodeLangVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

NodeLangParser::VarDeclContext* NodeLangParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, NodeLangParser::RuleVarDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(NodeLangParser::ID);
    setState(53);
    expr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

NodeLangParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NodeLangParser::ExprContext *> NodeLangParser::ExprContext::expr() {
  return getRuleContexts<NodeLangParser::ExprContext>();
}

NodeLangParser::ExprContext* NodeLangParser::ExprContext::expr(size_t i) {
  return getRuleContext<NodeLangParser::ExprContext>(i);
}

tree::TerminalNode* NodeLangParser::ExprContext::INT() {
  return getToken(NodeLangParser::INT, 0);
}

tree::TerminalNode* NodeLangParser::ExprContext::ID() {
  return getToken(NodeLangParser::ID, 0);
}


size_t NodeLangParser::ExprContext::getRuleIndex() const {
  return NodeLangParser::RuleExpr;
}

void NodeLangParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void NodeLangParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NodeLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}


antlrcpp::Any NodeLangParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NodeLangVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

NodeLangParser::ExprContext* NodeLangParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 10, NodeLangParser::RuleExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(55);
      match(NodeLangParser::T__3);
      setState(56);
      expr();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(57);
      _la = _input->LA(1);
      if (!(_la == NodeLangParser::T__4

      || _la == NodeLangParser::T__5)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(58);
      expr();
      setState(59);
      expr();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(61);
      _la = _input->LA(1);
      if (!(_la == NodeLangParser::T__3

      || _la == NodeLangParser::T__6)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(62);
      expr();
      setState(63);
      expr();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(65);
      match(NodeLangParser::T__0);
      setState(66);
      expr();
      setState(67);
      match(NodeLangParser::T__2);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(69);
      match(NodeLangParser::INT);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(70);
      match(NodeLangParser::ID);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

// Static vars and initialization.
std::vector<dfa::DFA> NodeLangParser::_decisionToDFA;
atn::PredictionContextCache NodeLangParser::_sharedContextCache;

// We own the ATN which in turn owns the ATN states.
atn::ATN NodeLangParser::_atn;
std::vector<uint16_t> NodeLangParser::_serializedATN;

std::vector<std::string> NodeLangParser::_ruleNames = {
  "program", "nodeDecl", "funcDecl", "node", "varDecl", "expr"
};

std::vector<std::string> NodeLangParser::_literalNames = {
  "", "'('", "'NODE'", "')'", "'-'", "'*'", "'/'", "'+'"
};

std::vector<std::string> NodeLangParser::_symbolicNames = {
  "", "", "", "", "", "", "", "", "ID", "INT", "WS"
};

dfa::Vocabulary NodeLangParser::_vocabulary(_literalNames, _symbolicNames);

std::vector<std::string> NodeLangParser::_tokenNames;

NodeLangParser::Initializer::Initializer() {
	for (size_t i = 0; i < _symbolicNames.size(); ++i) {
		std::string name = _vocabulary.getLiteralName(i);
		if (name.empty()) {
			name = _vocabulary.getSymbolicName(i);
		}

		if (name.empty()) {
			_tokenNames.push_back("<INVALID>");
		} else {
      _tokenNames.push_back(name);
    }
	}


  _serializedATN.insert(_serializedATN.end(), serializedATNSegment0,
    serializedATNSegment0 + sizeof(serializedATNSegment0) / sizeof(serializedATNSegment0[0]));


  atn::ATNDeserializer deserializer;
  _atn = deserializer.deserialize(_serializedATN);

  size_t count = _atn.getNumberOfDecisions();
  _decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    _decisionToDFA.emplace_back(_atn.getDecisionState(i), i);
  }
}

NodeLangParser::Initializer NodeLangParser::_init;
